--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "usrs-cli"
-version = "0.1.0"
+version = "0.2.0"
 authors = ["Robin Nehls <git@manol.is>"]
 
 [dependencies]
@@ -11,3 +11,6 @@ gstreamer = "0.9"
 log = "0.3"
 env_logger = "0.4"
 colored = "1.6"
+clap = "2"
+pitch_calc = "0.11"
+portaudio = "0.7"
